# solana-project-watch

./: .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  app.py  commit_msg.txt  main.py  pyproject.toml  share.py
src/: api.py  db.py  notify.py
