[project]
name = "solana-project-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyngrok>=7.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "solana>=0.36.11",
    "solders>=0.27.1",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
]
